fix padding on small screens

--- a/styles/media/max-979px.less
+++ b/styles/media/max-979px.less
@@ -1,5 +1,10 @@
 
 @media (max-width: 979px) {
+  
+  body {
+    padding-top: 0px;
+  }
+  
   .ocal-ad-banner {
     .title {
       font-size: 20px;
